clippy_out2.txt
    Checking fold_db v0.3.0 (/Users/tomtang/code/exemem-workspace/fold_db)
warning: failed to parse serde attribute
  | 
  | #[serde(into = "String", try_from = "String")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(skip_serializing_if = "Option::is_none")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(skip_serializing_if = "Option::is_none")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(skip_serializing_if = "Option::is_none")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(skip_serializing_if = "Option::is_none", default)]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(skip_serializing_if = "Option::is_none")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(skip_serializing_if = "Option::is_none", default)]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(default, skip_serializing_if = "HashMap::is_empty")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(default, skip_serializing_if = "HashMap::is_empty")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(default, skip_serializing_if = "HashMap::is_empty")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(default, skip_serializing_if = "HashMap::is_empty")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(default, skip_serializing_if = "HashMap::is_empty")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(default, skip_serializing_if = "HashMap::is_empty")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(skip_serializing_if = "Option::is_none")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(skip_serializing_if = "Option::is_none", default)]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(skip_serializing_if = "Option::is_none", default)]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(skip_serializing_if = "Option::is_none", default)]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(default, skip_serializing_if = "HashMap::is_empty")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(into = "String", try_from = "String")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(skip_serializing_if = "Option::is_none")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(skip_serializing_if = "Option::is_none")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(skip_serializing_if = "Option::is_none")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(skip_serializing_if = "Option::is_none", default)]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(skip_serializing_if = "Option::is_none")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(skip_serializing_if = "Option::is_none", default)]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(default, skip_serializing_if = "HashMap::is_empty")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(default, skip_serializing_if = "HashMap::is_empty")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(default, skip_serializing_if = "HashMap::is_empty")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(default, skip_serializing_if = "HashMap::is_empty")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(default, skip_serializing_if = "HashMap::is_empty")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(default, skip_serializing_if = "HashMap::is_empty")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(skip_serializing_if = "Option::is_none")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(skip_serializing_if = "Option::is_none", default)]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(skip_serializing_if = "Option::is_none", default)]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(skip_serializing_if = "Option::is_none", default)]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
warning: failed to parse serde attribute
  | 
  | #[serde(default, skip_serializing_if = "HashMap::is_empty")]
  | 
  = note: ts-rs failed to parse this attribute. It will be ignored.
error[E0599]: no method named `unwrap` found for struct `std::path::PathBuf` in the current scope
  --> src/db_operations/native_index/face/mod.rs:83:69
   |
83 |             .unwrap_or_else(|_| tempfile::tempdir().unwrap().keep().unwrap());
   |                                 -------------------                 ^^^^^^ method not found in `std::path::PathBuf`
   |                                 |
   |                                 method `unwrap` is available on `std::result::Result<tempfile::TempDir, std::io::Error>`

error: associated function `with_model` is never used
  --> src/db_operations/native_index/mod.rs:59:19
   |
41 | impl NativeIndexManager {
   | ----------------------- associated function in this implementation
...
59 |     pub(crate) fn with_model(store: Arc<dyn KvStore>, model: Arc<dyn Embedder>) -> Self {
   |                   ^^^^^^^^^^
   |
   = note: `-D dead-code` implied by `-D warnings`
   = help: to override `-D warnings` add `#[allow(dead_code)]`

error: very complex type used. Consider factoring parts into `type` definitions
   --> src/schema_service/state_transforms.rs:436:10
    |
436 |       ) -> FoldDbResult<(
    |  __________^
437 | |         DataClassification,
438 | |         HashMap<String, HashMap<String, f32>>,
439 | |         bool,
440 | |         u32,
441 | |     )> {
    | |______^
    |
    = help: for further information visit https://rust-lang.github.io/rust-clippy/rust-1.93.0/index.html#type_complexity
    = note: `-D clippy::type-complexity` implied by `-D warnings`
    = help: to override `-D warnings` add `#[allow(clippy::type_complexity)]`

error: you seem to want to iterate on a map's values
   --> src/schema_service/state_transforms.rs:472:48
    |
472 |             for (_output_field, &nmi_score) in output_scores {
    |                                                ^^^^^^^^^^^^^
    |
    = help: for further information visit https://rust-lang.github.io/rust-clippy/rust-1.93.0/index.html#for_kv_map
    = note: `-D clippy::for-kv-map` implied by `-D warnings`
    = help: to override `-D warnings` add `#[allow(clippy::for_kv_map)]`
help: use the corresponding method
    |
472 -             for (_output_field, &nmi_score) in output_scores {
472 +             for &nmi_score in output_scores.values() {
    |

error: could not compile `fold_db` (lib) due to 3 previous errors
warning: build failed, waiting for other jobs to finish...
For more information about this error, try `rustc --explain E0599`.
error: could not compile `fold_db` (lib test) due to 1 previous error
